--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-REACT_APP_CANDY_MACHINE_ID=4BMKQZ8EiTzdR2fhFZTH4LEWxhXuW3PuwUBJr8GypbKU
+REACT_APP_CANDY_MACHINE_ID=4WM5FXYyKg9hcAUH15beTU5a1NJ6Pt4AtYRDkVAd1yDo
 
-REACT_APP_SOLANA_NETWORK=devnet
-REACT_APP_SOLANA_RPC_HOST=https://metaplex.devnet.rpcpool.com/
+REACT_APP_SOLANA_NETWORK=mainnet-beta
+REACT_APP_SOLANA_RPC_HOST=https://autumn-empty-voice.solana-mainnet.quiknode.pro/b6d91cd587a7dd579614a9eabf1299a31ee078b0/
 SKIP_PREFLIGHT_CHECK=false
